# BOT_AI_ITMO

./: .env  config.py  main.py  pyproject.toml
bot/: handlers.py
data/processed/: ai_curriculum.json  ai_product_curriculum.json
llm/: llm_client.py  rag_retriever.py
parser/: parser_ai.py  parser_ai_product.py  parser_utils.py
